--- a/notebooks/main.ipynb
+++ b/notebooks/main.ipynb
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -75,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -84,7 +84,7 @@
        "True"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -95,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -104,7 +104,6 @@
     "from typing import Optional, List, Tuple\n",
     "import random\n",
     "import chess\n",
-    "import chess.polyglot\n",
     "import copy\n",
     "\n",
     "class Node:\n",
@@ -122,28 +121,23 @@
     "\n",
     "    def update(self, reward: int):\n",
     "        self.visits += 1\n",
-    "        if reward == 1: # checkmate for white\n",
-    "            if self.board.turn == chess.BLACK:\n",
-    "                self.value += 1\n",
-    "        elif reward == -1:\n",
-    "            if self.board.turn == chess.BLACK:\n",
-    "                self.value += -1\n",
-    "        elif reward == 0.5: # draw\n",
-    "            self.value += 0\n",
+    "        self.value += reward\n",
     "        if self.parent:\n",
     "            self.parent.update(-reward)\n",
     "\n",
     "    def expand(self) -> Optional['Node']:\n",
     "        legal_moves = list(self.board.legal_moves)\n",
     "        available_moves = [move for move in legal_moves if move not in self.used_moves]\n",
-    "        while available_moves:\n",
+    "        if available_moves:\n",
     "            move = random.choice(available_moves)\n",
     "            self.used_moves.add(move)  # Marcar o movimento como usado\n",
     "            available_moves.remove(move)\n",
     "            new_board = copy.deepcopy(self.board)\n",
     "            new_board.push(move)\n",
     "            leaf = Node(new_board, parent=self, from_move=move)\n",
-    "            self.children.append(leaf)"
+    "            self.children.append(leaf)\n",
+    "        else:\n",
+    "            pass"
    ]
   },
   {
@@ -155,7 +149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -168,10 +162,12 @@
     "    C = 1.414  # Exploração constante, ajustável\n",
     "    return node.value / node.visits + C * math.sqrt(math.log(node.parent.visits) / node.visits)\n",
     "\n",
-    "def selection(root: Node) -> Node:\n",
-    "    root.expand()\n",
-    "    leaf = max(root.children, key=uct)\n",
-    "    return leaf\n",
+    "def selection(node: Node) -> Node:\n",
+    "    while node.is_fully_expanded():\n",
+    "        if not node.children:  # Verifica se a lista children está vazia\n",
+    "            return node\n",
+    "        node = max(node.children, key=uct)\n",
+    "    return node\n",
     "\n",
     "def expansion(node: Node) -> Node:\n",
     "    if not node.is_fully_expanded():\n",
@@ -183,10 +179,10 @@
     "            children = max(node.children, key=uct)\n",
     "            return children\n",
     "        else:\n",
-    "            return node\n",
+    "            return node    \n",
     "\n",
-    "def simulation(children: Node) -> int:\n",
-    "    board = copy.deepcopy(children.board)\n",
+    "def simulation(node: Node) -> int:\n",
+    "    board = copy.deepcopy(node.board)\n",
     "    while not board.is_game_over():\n",
     "        legal_moves = list(board.legal_moves)\n",
     "        move = random.choice(legal_moves)\n",
@@ -197,7 +193,7 @@
     "    elif result == '0-1':\n",
     "        reward = -1\n",
     "    else:\n",
-    "        reward = 0.5\n",
+    "        reward = 0\n",
     "    return reward\n",
     "\n",
     "def backpropagation(reward: int, node: Node) -> None:\n",
@@ -206,10 +202,25 @@
     "def best_child(root: Node, player: bool) -> Node:\n",
     "    best_child = random.choice(root.children)\n",
     "    best_visits = 0\n",
-    "    for child in root.children:\n",
-    "        if child.visits > best_visits:\n",
-    "            best_visits = child.visits\n",
-    "            best_child = child\n",
+    "       \n",
+    "    if root.board.turn == chess.WHITE:\n",
+    "        best_avaliation = -float('inf')        \n",
+    "        for child in root.children:\n",
+    "            avaliation = child.value / child.visits\n",
+    "            if avaliation > best_avaliation:\n",
+    "                best_avaliation = avaliation\n",
+    "                best_child = child\n",
+    "    else:\n",
+    "        best_avaliation = float('inf')        \n",
+    "        for child in root.children:\n",
+    "            avaliation = child.value / child.visits\n",
+    "            if avaliation < best_avaliation:\n",
+    "                best_avaliation = avaliation\n",
+    "                best_child = child\n",
+    "\n",
+    "        # if child.visits > best_visits:\n",
+    "        #     best_visits = child.visits\n",
+    "        #     best_child = child\n",
     "    return best_child\n",
     "\n",
     "def mcts(board: chess.Board, n_simulations: int, player: bool) -> Optional[chess.Move]:\n",
@@ -233,41 +244,59 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      ". . . . . . K .\n",
-      ". . . . q . . n\n",
-      ". . . . k . . .\n",
+      "r . . . . . . .\n",
+      ". . . . k . K .\n",
+      ". . . . . . P .\n",
+      ". . . . . P . .\n",
       ". . . . . . . .\n",
       ". . . . . . . .\n",
       ". . . . . . . .\n",
       ". . . . . . . .\n",
-      ". . . . . . . .\n",
-      "Player WHITE move: Kh8\n",
-      "Player BLACK move: Qh4\n",
+      "Player BLACK move: Rh8\n",
+      "Player WHITE move: f6+\n",
+      "Player BLACK move: Ke6\n",
+      "Player WHITE move: Kxh8\n",
+      "Player BLACK move: Kd7\n",
+      "Player WHITE move: f7\n",
+      "Player BLACK move: Kd8\n",
+      "Player WHITE move: f8=B\n",
+      "Player BLACK move: Ke8\n",
       "Player WHITE move: Kg8\n",
-      "Player BLACK move: Kf6\n",
-      "Player WHITE move: Kh8\n",
+      "Player BLACK move: Kd8\n",
+      "Player WHITE move: Bh6\n",
+      "Player BLACK move: Ke8\n",
+      "Player WHITE move: Bc1\n",
+      "Player BLACK move: Kd8\n",
+      "Player WHITE move: g7\n",
+      "Player BLACK move: Ke8\n",
+      "Player WHITE move: Kh7\n",
       "Player BLACK move: Kf7\n",
-      "Draw!\n",
-      "\n",
-      "Histórico de movimentos:\n",
-      "[Event \"Test\"]\n",
-      "[Site \"?\"]\n",
-      "[Date \"????.??.??\"]\n",
-      "[Round \"?\"]\n",
-      "[White \"MCTS\"]\n",
-      "[Black \"MCTS\"]\n",
-      "[Result \"1/2-1/2\"]\n",
-      "[SetUp \"1\"]\n",
-      "[FEN \"6K1/4q2n/4k3/8/8/8/8/8 w - - 0 1\"]\n",
-      "\n",
-      "1. Kh8 Qh4 2. Kg8 Kf6 3. Kh8 Kf7 1/2-1/2\n"
+      "Player WHITE move: Bg5\n"
+     ]
+    },
+    {
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[6], line 59\u001b[0m\n\u001b[0;32m     56\u001b[0m     \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;130;01m\\n\u001b[39;00m\u001b[38;5;124mHistórico de movimentos:\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m     57\u001b[0m     \u001b[38;5;28mprint\u001b[39m(game)\n\u001b[1;32m---> 59\u001b[0m \u001b[43mplay_game\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n",
+      "Cell \u001b[1;32mIn[6], line 30\u001b[0m, in \u001b[0;36mplay_game\u001b[1;34m()\u001b[0m\n\u001b[0;32m     28\u001b[0m     \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mPlayer WHITE move: \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mboard\u001b[38;5;241m.\u001b[39msan(move)\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m     29\u001b[0m \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[1;32m---> 30\u001b[0m     move \u001b[38;5;241m=\u001b[39m \u001b[43mmcts\u001b[49m\u001b[43m(\u001b[49m\u001b[43mboard\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m5000\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mboard\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mturn\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m     31\u001b[0m     \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mPlayer BLACK move: \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mboard\u001b[38;5;241m.\u001b[39msan(move)\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m     33\u001b[0m move_history\u001b[38;5;241m.\u001b[39mappend(board\u001b[38;5;241m.\u001b[39msan(move))\n",
+      "Cell \u001b[1;32mIn[4], line 76\u001b[0m, in \u001b[0;36mmcts\u001b[1;34m(board, n_simulations, player)\u001b[0m\n\u001b[0;32m     74\u001b[0m     leaf \u001b[38;5;241m=\u001b[39m selection(root)  \u001b[38;5;66;03m# Seleciona\u001b[39;00m\n\u001b[0;32m     75\u001b[0m     node \u001b[38;5;241m=\u001b[39m expansion(leaf)  \u001b[38;5;66;03m# Expande\u001b[39;00m\n\u001b[1;32m---> 76\u001b[0m     reward \u001b[38;5;241m=\u001b[39m \u001b[43msimulation\u001b[49m\u001b[43m(\u001b[49m\u001b[43mnode\u001b[49m\u001b[43m)\u001b[49m  \u001b[38;5;66;03m# Simula\u001b[39;00m\n\u001b[0;32m     77\u001b[0m     backpropagation(reward, node)  \u001b[38;5;66;03m# Retropropaga\u001b[39;00m\n\u001b[0;32m     78\u001b[0m best \u001b[38;5;241m=\u001b[39m best_child(root, player)\n",
+      "Cell \u001b[1;32mIn[4], line 31\u001b[0m, in \u001b[0;36msimulation\u001b[1;34m(node)\u001b[0m\n\u001b[0;32m     29\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21msimulation\u001b[39m(node: Node) \u001b[38;5;241m-\u001b[39m\u001b[38;5;241m>\u001b[39m \u001b[38;5;28mint\u001b[39m:\n\u001b[0;32m     30\u001b[0m     board \u001b[38;5;241m=\u001b[39m copy\u001b[38;5;241m.\u001b[39mdeepcopy(node\u001b[38;5;241m.\u001b[39mboard)\n\u001b[1;32m---> 31\u001b[0m     \u001b[38;5;28;01mwhile\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m \u001b[43mboard\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mis_game_over\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m:\n\u001b[0;32m     32\u001b[0m         legal_moves \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mlist\u001b[39m(board\u001b[38;5;241m.\u001b[39mlegal_moves)\n\u001b[0;32m     33\u001b[0m         move \u001b[38;5;241m=\u001b[39m random\u001b[38;5;241m.\u001b[39mchoice(legal_moves)\n",
+      "File \u001b[1;32mc:\\Users\\dnilson\\Documents\\PROJETOS\\chess-mcts\\.venv\\Lib\\site-packages\\chess\\__init__.py:2035\u001b[0m, in \u001b[0;36mBoard.is_game_over\u001b[1;34m(self, claim_draw)\u001b[0m\n\u001b[0;32m   2034\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mis_game_over\u001b[39m(\u001b[38;5;28mself\u001b[39m, \u001b[38;5;241m*\u001b[39m, claim_draw: \u001b[38;5;28mbool\u001b[39m \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;01mFalse\u001b[39;00m) \u001b[38;5;241m-\u001b[39m\u001b[38;5;241m>\u001b[39m \u001b[38;5;28mbool\u001b[39m:\n\u001b[1;32m-> 2035\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43moutcome\u001b[49m\u001b[43m(\u001b[49m\u001b[43mclaim_draw\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mclaim_draw\u001b[49m\u001b[43m)\u001b[49m \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m\n",
+      "File \u001b[1;32mc:\\Users\\dnilson\\Documents\\PROJETOS\\chess-mcts\\.venv\\Lib\\site-packages\\chess\\__init__.py:2081\u001b[0m, in \u001b[0;36mBoard.outcome\u001b[1;34m(self, claim_draw)\u001b[0m\n\u001b[0;32m   2079\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mis_seventyfive_moves():\n\u001b[0;32m   2080\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m Outcome(Termination\u001b[38;5;241m.\u001b[39mSEVENTYFIVE_MOVES, \u001b[38;5;28;01mNone\u001b[39;00m)\n\u001b[1;32m-> 2081\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mis_fivefold_repetition\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m:\n\u001b[0;32m   2082\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m Outcome(Termination\u001b[38;5;241m.\u001b[39mFIVEFOLD_REPETITION, \u001b[38;5;28;01mNone\u001b[39;00m)\n\u001b[0;32m   2084\u001b[0m \u001b[38;5;66;03m# Claimable draws.\u001b[39;00m\n",
+      "File \u001b[1;32mc:\\Users\\dnilson\\Documents\\PROJETOS\\chess-mcts\\.venv\\Lib\\site-packages\\chess\\__init__.py:2171\u001b[0m, in \u001b[0;36mBoard.is_fivefold_repetition\u001b[1;34m(self)\u001b[0m\n\u001b[0;32m   2164\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mis_fivefold_repetition\u001b[39m(\u001b[38;5;28mself\u001b[39m) \u001b[38;5;241m-\u001b[39m\u001b[38;5;241m>\u001b[39m \u001b[38;5;28mbool\u001b[39m:\n\u001b[0;32m   2165\u001b[0m \u001b[38;5;250m    \u001b[39m\u001b[38;5;124;03m\"\"\"\u001b[39;00m\n\u001b[0;32m   2166\u001b[0m \u001b[38;5;124;03m    Since the 1st of July 2014 a game is automatically drawn (without\u001b[39;00m\n\u001b[0;32m   2167\u001b[0m \u001b[38;5;124;03m    a claim by one of the players) if a position occurs for the fifth time.\u001b[39;00m\n\u001b[0;32m   2168\u001b[0m \u001b[38;5;124;03m    Originally this had to occur on consecutive alternating moves, but\u001b[39;00m\n\u001b[0;32m   2169\u001b[0m \u001b[38;5;124;03m    this has since been revised.\u001b[39;00m\n\u001b[0;32m   2170\u001b[0m \u001b[38;5;124;03m    \"\"\"\u001b[39;00m\n\u001b[1;32m-> 2171\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mis_repetition\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;241;43m5\u001b[39;49m\u001b[43m)\u001b[49m\n",
+      "File \u001b[1;32mc:\\Users\\dnilson\\Documents\\PROJETOS\\chess-mcts\\.venv\\Lib\\site-packages\\chess\\__init__.py:2274\u001b[0m, in \u001b[0;36mBoard.is_repetition\u001b[1;34m(self, count)\u001b[0m\n\u001b[0;32m   2272\u001b[0m maybe_repetitions \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m1\u001b[39m\n\u001b[0;32m   2273\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m state \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mreversed\u001b[39m(\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_stack):\n\u001b[1;32m-> 2274\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m state\u001b[38;5;241m.\u001b[39moccupied \u001b[38;5;241m==\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39moccupied:\n\u001b[0;32m   2275\u001b[0m         maybe_repetitions \u001b[38;5;241m+\u001b[39m\u001b[38;5;241m=\u001b[39m \u001b[38;5;241m1\u001b[39m\n\u001b[0;32m   2276\u001b[0m         \u001b[38;5;28;01mif\u001b[39;00m maybe_repetitions \u001b[38;5;241m>\u001b[39m\u001b[38;5;241m=\u001b[39m count:\n",
+      "\u001b[1;31mKeyboardInterrupt\u001b[0m: "
      ]
     }
    ],
@@ -280,9 +309,8 @@
     "\n",
     "    board = chess.Board()\n",
     "    # initial_fen = board.fen()  # Capturar a posição inicial do tabuleiro\n",
-    "\n",
-    "    # initial_fen = \"6k1/4Q2N/4K3/8/8/8/8/8 w - - 0 1\" # checkmate white\n",
-    "    initial_fen =  \"6K1/4q2n/4k3/8/8/8/8/8 w - - 0 1\" # checkmate black\n",
+    "    initial_fen = \"r7/4k1K1/6P1/5P2/8/8/8/8 b - - 0 1\" # checkmate black\n",
+    "    # initial_fen =  \"4N1k1/4Q3/6K1/8/8/8/8/8 w - - 0 1\" # checkmate white\n",
     "    board.set_fen(initial_fen)\n",
     "\n",
     "    print(board)\n",
@@ -299,10 +327,10 @@
     "    # Jogo\n",
     "    while not board.is_game_over():\n",
     "        if board.turn == chess.WHITE:\n",
-    "            move = mcts(board, 1600, board.turn)\n",
+    "            move = mcts(board, 5000, board.turn)\n",
     "            print(f\"Player WHITE move: {board.san(move)}\")\n",
     "        else:\n",
-    "            move = mcts(board, 1600, board.turn)\n",
+    "            move = mcts(board, 5000, board.turn)\n",
     "            print(f\"Player BLACK move: {board.san(move)}\")\n",
     "\n",
     "        move_history.append(board.san(move))\n",
